--- a/04.size/index.html
+++ b/04.size/index.html
@@ -11,13 +11,25 @@
 
 <body>
   <h1>04.Size</h1>
-  <div class='box1'>横400px,縦300pxになりたい</div>
+  <div class='inline'>inlineinlineinlineinline</div>
+  <div class='inline'>inlineinlineinlineinline</div>
+  <div class='inline'>inlineinlineinlineinline</div>
+  <div class='block'>blockblockblockblockblock</div>
+  <div class='block'>blockblockblockblockblock</div>
+  <div class='block'>blockblockblockblockblock</div>
+  <div class='inline-block'>inline-blockinline-block</div>
+  <div class='inline-block'>inline-blockinline-block</div>
+  <div class='inline-block'>inline-blockinline-block</div>
+  <br>
+
+
+  <!-- <div class='box1'>横400px,縦300pxになりたい</div>
   <div class='box2'>画面いっぱいまで広がりたい</div>
   <div class='box3'>中身に応じて自動で</div>
   <div class='tomato-box'>
     <div class='box4'>tomato-boxの半分</div>
     <div class='box5'>Block</div>
-  </div>
+  </div> -->
   <hr>
   <a href="../index.html">トップに戻る</a>
 </body>
