--- a/create_header/index.html
+++ b/create_header/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link  href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css">
   <title>create header</title>
 </head>
 
